# agentevals

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  TODOS.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-evaluator-sdk.yml  publish-grader-sdk.yml  release.yml
docs/: custom-graders.md  otel-compatibility.md  streaming.md
examples/: README.md
examples/custom_evaluators/: eval_config.yaml  response_quality.py
examples/custom_graders/: eval_config.yaml  tool_call_checker.py
examples/dice_agent/: agent.py  main.py
examples/langchain_agent/: agent.py  main.py
examples/sdk_example/: async_example.py
examples/strands_agent/: agent.py  main.py
examples/zero-code-examples/langchain/: run.py
examples/zero-code-examples/openai-agents/: eval_set.json  requirements.txt  run.py
examples/zero-code-examples/strands/: run.py
src/agentevals/: __init__.py  builtin_metrics.py  cli.py  config.py  converter.py  custom_evaluators.py  eval_config_loader.py  extraction.py  genai_converter.py  mcp_server.py  output.py  runner.py  sdk.py  trace_metrics.py
src/agentevals/api/: app.py  debug_routes.py  models.py  otlp_routes.py  routes.py  streaming_routes.py
src/agentevals/evaluator/: resolver.py  sources.py  venv.py
src/agentevals/grader/: __init__.py  resolver.py  sources.py  templates.py
src/agentevals/loader/: __init__.py  base.py  jaeger.py  otlp.py
src/agentevals/streaming/: __init__.py  incremental_processor.py  processor.py  session.py  ws_server.py
src/agentevals/utils/: genai_messages.py  log_buffer.py  log_enrichment.py
src/trace_eval/: cli.py  runner.py
src/trace_eval/api/: app.py  routes.py
tests/: test_api.py  test_converter.py  test_extraction.py  test_genai_converter.py  test_jaeger_loader.py  test_log_enrichment.py  test_otlp_loader.py  test_otlp_receiver.py  test_runner.py  test_sdk.py
tests/integration/: conftest.py  test_evaluation_pipeline.py  test_live_agents.py  test_session_grouping.py  test_timing_stress.py
ui/: package-lock.json
ui/src/: config.ts  main.tsx
ui/src/api/: client.ts
ui/src/components/annotation-queue/: AnnotationQueueView.tsx
ui/src/components/bug-report/: BugReportModal.tsx
ui/src/components/inspector/: ComparisonPanel.tsx  InspectorView.tsx  InvocationSummaryPanel.tsx  MetricsComparisonSection.tsx
ui/src/components/sidebar/: Sidebar.tsx
ui/src/components/streaming/: LiveConversationPanel.tsx  LiveStreamingView.tsx  SessionCard.tsx
ui/src/components/upload/: MetricSelector.tsx  RawJsonPreview.tsx  UploadView.tsx
ui/src/components/welcome/: WelcomeView.tsx
ui/src/context/: TraceContext.tsx  TraceProvider.tsx
ui/src/lib/: console-capture.ts  network-capture.ts  trace-converter.ts  trace-loader.ts  trace-metadata.ts  types.ts
