[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentevals"
version = "0.2.0"
description = "Standalone CLI to evaluate agent based on OpenTelemetry traces"
requires-python = ">=3.11"
dependencies = [
    "google-adk[eval]",
    "click>=8.0",
    "tabulate>=0.9.0",
    "pandas>=2.2.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
live = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
]
streaming = [
    "opentelemetry-sdk>=1.20.0",
]

[project.scripts]
agentevals = "agentevals.cli:main"

[tool.hatch.build]
artifacts = ["src/agentevals/_static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentevals"]

[tool.uv.extra-build-dependencies]
"rouge_score-0.1.2" = ["setuptools"]

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
