[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentevals"
version = "0.4.0"
description = "Standalone framework to evaluate agent correctness based on portable OpenTelemetry traces"
requires-python = ">=3.11"
dependencies = [
    "google-adk[eval]>=1.25.0",
    "click>=8.0",
    "tabulate>=0.9.0",
    "pandas>=2.2.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "opentelemetry-proto>=1.36.0",
]

[project.optional-dependencies]
live = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
]
streaming = [
    "opentelemetry-sdk>=1.20.0",
    "websockets>=12.0",
]

[project.scripts]
agentevals = "agentevals.cli:main"

[tool.hatch.build]
artifacts = ["src/agentevals/_static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentevals"]

[tool.uv.extra-build-dependencies]
"rouge_score-0.1.2" = ["setuptools"]

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: OTLP pipeline tests with ASGI apps (no API keys)",
    "e2e: End-to-end tests requiring API keys and real agents",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
